# lol-predictor

./: .dbmaterc  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dashboard  Dockerfile.proxy  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  railway.toml  requirements-web-basic.txt  requirements-web.txt  requirements.dashboard.txt  requirements.proxy.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build-electron.yml  ci.yml  publish-model.yml
db/migrations/: 20260301000000_initial_schema.sql  20260301000001_add_columns_and_tables.sql  20260309000000_add_level_columns.sql
docs/: CODEX_AUDIT.md  WEB_APP_PATH.md
electron-app/: package-lock.json  package.json
electron-app/sidecar/: shap_predict.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css  styles.ts  types.ts
lol_genius/: cli.py  config.py  utils.py
lol_genius/api/: client.py  ddragon.py  proxy_client.py  riot_api.py
lol_genius/crawler/: enrich.py  fetch_timelines.py  parse.py  planner.py  seed.py  snowball.py
lol_genius/dashboard/: api.py  app.py  run.py
lol_genius/db/: connection.py  queries.py  schema.py
lol_genius/features/: bans.py  build.py  champion.py  draft.py  (+5 more)
scripts/: codex_smoke.sh  web_only_start.sh
tests/: conftest.py  test_api_client.py  test_cache.py  test_db.py  test_enrich_batch.py  test_enrich_extended.py  test_features.py  test_key_pool.py  test_parse.py  test_proxy_client.py  test_seed.py  test_timeline.py
(+53 files in other folders)
