[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-genius"
version = "0.2.1"
description = "League of Legends pre-game match outcome predictor with SHAP interpretability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Eric Briscoe" }]
dependencies = [
    "psycopg2-binary>=2.9",
    "httpx>=0.28",
    "xgboost>=3.2",
    "shap>=0.51",
    "scikit-learn>=1.8",
    "pandas>=3.0",
    "numpy>=2.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "matplotlib>=3.10",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "fastapi>=0.135",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=7.0"]
dashboard = ["sse-starlette>=3.0", "pyarrow>=23.0"]
proxy = []
onnx = ["onnxmltools>=1.16", "skl2onnx>=1.20"]

[project.scripts]
lol-genius = "lol_genius.cli:cli"
lol-genius-proxy = "lol_genius.proxy.run:main"

[tool.setuptools.packages.find]
include = ["lol_genius*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
